kubernetes-platform/frontend/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: frontend
  name: frontend
