kubernetes-platform/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: frontend
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "frontend.haluk.haluk.com"
    secretName: wildcard-haluk
  rules:
    - host: "frontend.haluk.haluk.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
